# skitter-ro-client-rs

./: .gitignore  Cargo.toml  README.md  openapi.yaml  requirements.txt
examples/: dump_id.py  dump_id.rs  pull_replicate.py  pull_replicate.rs  simple.rs
sql/: 001_init.sql
src/: lib.rs
