[package]
name = "skitter-ro-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-compression = { version = "0.4.0", features = ["tokio", "zlib"] }
reqwest = { "version" = "0.11.18", "features" = ["gzip", "json"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = { version = "1.0.96" }
serde_with = { version = "3.0.0", features = ["base64"] }
time = { version = "0.3.21", features = ["formatting", "parsing"] }
tokio = { "version" = "1.17.0", "features" = ["rt-multi-thread", "macros"] }
tracing = { "version" = "0.1.37" }

[dev-dependencies]
base64 = "0.21.2"
httpmock = { version = "0.6.7" }
sqlx = { version = "0.6.3", features = ["runtime-tokio-native-tls", "sqlite", "time"] }
tap = { version = "1.0.1" }
tracing-log = { version = "0.1.3" }
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json"] }
